--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               <p class="mb-0">Acquired internship at MIT Sloan School of Management as a Research Assistant(Data Scientist) for a research project under a professor. The offer letter was rescinded in the wake of getting it due to the time imperatives as the professor needs me to work for 40 hours which I can't work due to academic requirements. I likewise asked for authorization from school for a semester break and work as an assistant yet did not get the approval and lost the opportunity.  </p>
               <br>
               <li class="list-inline-item">
-              <a href="MIT offer letter.pdf" download>
+              <a href="MIT/MIT Offer letter.pdf" download>
                 <span class="fa-stack fa-lg" title="MIT offer letter">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-file-text fa-stack-1x fa-inverse"></i>
