--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
           <div class="subheading mb-3">Data Tools</div>
           <ul>
             <li>
-                Tableau, scikit-Learn, Mataplotlib, Seaborn, Plotly, Numpy, Pandas, NLTK, Gensim, Word2Vec, GloVE, D3, LaTex, Microsoft Office
+                Tableau, scikit-Learn, Mataplotlib, Seaborn, Plotly, Numpy, Pandas, NLTK, SpaCy, Gensim, Word2Vec, GloVE, D3, LaTex, Microsoft Office
                 </li>
                 </ul>
           <div class="subheading mb-3">OS, Databases & Cloud</div>
